--- a/src/Book.css
+++ b/src/Book.css
@@ -1,7 +1,4 @@
-#book-message {
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5em;
-    font-size: 30px;
+form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
