--- a/src/Book.css
+++ b/src/Book.css
@@ -28,3 +28,10 @@ label {
     color: red;
     font-weight: bold;
 }
+
+@media (max-width: 600px) { 
+    table {
+    font-size: 0.6rem;
+    
+}
+}
