--- a/src/Header.css
+++ b/src/Header.css
@@ -18,7 +18,6 @@
 }
 
 .header>ul>li>a {
-    font-size: 1em;
     font-family: sans-serif;
     font-weight: bold;
     color: rgba(255, 255, 255, 0.8);
@@ -35,10 +34,19 @@
 
 .header-left {
     justify-self: start;
-    font-size: 0.7em;
+    font-size: 0.4rem;
 
 }
 
 .header-right{
     justify-self: end;
+    font-size: 1.2em;
+
 } 
+
+@media (max-width: 550px) {
+    .header-left {
+        font-size: 0.3rem;
+    
+    }
+  }
