--- a/src/BookLibrary.css
+++ b/src/BookLibrary.css
@@ -3,16 +3,46 @@ table {
     margin-top: 1em;
     margin-left: auto;
     margin-right: auto;
+    background-color: #fefae0b1;
+
+}
+
+#head {
+    border-bottom: 1px solid ;
+
+}
+
+#welcome {
+    margin-top: 8rem;
+    margin: auto;
+    width: 60%;
+    padding: 40px;
+    max-width: 50%;
+}
+
+h1 {
+    font-weight: 600;
+    font-size: 150%;
+}
+
+h2 {
+    font-weight: 100;
+    font-size: 1rem;
+}
+
+#pleaseDelete {
+    color: red;
 }
 
 td {
     word-wrap: break-word;
     max-width: 300px;
+    padding: 1em;
     }
 
 th {
     text-align: left;
-    padding-bottom: 1em;
+    padding-bottom: 1.2em;
 }
 
 td:nth-child(1) {
