--- a/src/Header.css
+++ b/src/Header.css
@@ -6,26 +6,33 @@
     grid-template-columns: 1fr 1fr;
 }
 
+.header img {
+    width: 30%;
+    max-width: 30%;
+    border: 1.5px solid #006d77;
+}
+
 .header>ul {
     display: inline;
     margin: 0;
     list-style-type: none;
+    margin-right: 4em;
+
 }
 
 .header>ul>li {
     display: inline;
-    margin-right: 1.5em;
+    margin-right: 1.1em;
 }
 
 .header>ul>li>a {
-    font-family: sans-serif;
-    font-weight: 200;
+    font-weight: 400;
     color: #ffffff;
     text-decoration: none;
 }
 
 .header>ul>li>a:hover {
-    color: #fcbf49;
+    color: #e29578;
 }
 
 .header>ul>li.logo {
@@ -39,13 +46,12 @@
 
 .header-right{
     justify-self: end;
-    font-size: 1.2em;
-
+    font-size: 1.5em;
 } 
 
-@media (max-width: 650px) {
+@media (max-width: 750px) {
     .header-left {
         font-size: 0.3rem;
-    
+
     }
   }
