--- a/src/Book.css
+++ b/src/Book.css
@@ -7,13 +7,15 @@ form {
     margin-left: auto;
     margin-right: auto;
     margin-top: 4em;
+    box-shadow: 3px 3px 19px rgb(33, 108, 101);
+    padding: 2em;
+    border-radius: 0.2em;
 }
 
 input[type="submit"] {
     grid-column: 2/3;
     width: 100px;
-    justify-self: end;
-
+    justify-self: end;   
 }
 
 input[type="text"] {
@@ -22,6 +24,10 @@ input[type="text"] {
 
 label {
     justify-self: end;
+}
+
+h1 {
+    text-align: center;
 }
 
 h5 {
