--- a/src/BookLibrary.css
+++ b/src/BookLibrary.css
@@ -1,20 +1,23 @@
 table {
-    border-spacing: 3em 1em;
+  /*   border-spacing: 3em 1em; */
     margin-top: 1em;
     margin-left: auto;
     margin-right: auto;
+    width: 100%;
 }
 
 .bookLibraryBox {
     background-color: #fefae0b1;
-    float:left;
+    /* float:left; */
 }
 
 .book-library-container {
     margin-top: 10%;
     margin-left: 10%;
     margin-right: 10%;
-    max-width: 55%;
+    max-width: 50%;
+    display: inline-flex;
+
 }
 
 #head {
@@ -29,7 +32,7 @@ table {
 
 h1 {
     font-weight: 600;
-    font-size: 190%;
+    font-size: 3rem;
 }
 
 h2 {
@@ -133,3 +136,4 @@ td:nth-child(2) {
         display: none;
     }
 }
+
