--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,9 +1,21 @@
 .footer {
-    position:fixed;
-    bottom:0;
-    left:0;
-    width:100%;
-    height: 90px;
-    background-color: #D0DAEE;
+  columns: 10em 4;
+  max-height: 25px;
+  width: 100%;
+  position:fixed;
+  background: rgb(125, 172, 167);
+  padding: 10px;
+  color: #fff;
+  bottom: 0;
+  font-size: 0.8em;
 }
 
+.footer {
+    padding-top: 15px;
+}
+
+.footer svg {
+    font-size: 1.7em;
+    padding-bottom: 5px;
+    padding-left: 15px;
+}
