--- a/src/SearchList.css
+++ b/src/SearchList.css
@@ -10,11 +10,25 @@ ul {
 }
 
 .searchList {
-    float:right;
-    margin-right: 7em;
+    /* float:right; */
+   /*  margin-right: 7em; */
     text-decoration: none;
+    flex-direction: column;
+    align-items: center;
+    display: inline-flex;
 }
 
 .id {
     font-weight: 600;
+}
+
+
+.searchList-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.searchbar-container {
+    display: flex;
 }
