--- a/src/Book.css
+++ b/src/Book.css
@@ -3,15 +3,13 @@ form {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1em;
-    width: 420px;
+    width: 520px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 4em;
     box-shadow: 3px 3px 19px rgb(33, 108, 101);
     padding: 2em;
     border-radius: 0.2em;
-    z-index: -1;
-    position: absolute;
 }
 
 input[type="submit"] {
@@ -39,9 +37,14 @@ h1 {
 
 h5 {
     font-weight:400;
-    font-size: 1em;
+    font-size: 1.2em;
     margin-top: 35px;
     margin-bottom: 0.5px;
+}
+
+span {
+    color: red;
+    font-size: 0.7em;
 }
 
 #comment {
